fixed .button__card-bookmark visibility

--- a/src/blocks/button/__card-bookmark/button__card-bookmark.css
+++ b/src/blocks/button/__card-bookmark/button__card-bookmark.css
@@ -1,20 +1,17 @@
 .button__card-bookmark{
+  /*margin: 0;*/
+  margin: 0em;
+  padding: 1px 6px;
   background-image: url(../../../images/button/__card-bookmark/button__card-bookmark.svg);
   background-repeat: no-repeat;
   background-position-x: 7px;
   background-position-y: 8px;
   cursor: pointer;
-
-  /*             */
   text-transform: none;
   overflow: visible;
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
-  margin: 0;
-  text-rendering: auto;
   box-sizing: border-box;
-  margin: 0em;
-  padding: 1px 6px;
-
+  text-rendering: auto;
 }
