--- a/src/blocks/button/__card/button__card.css
+++ b/src/blocks/button/__card/button__card.css
@@ -1,15 +1,18 @@
-.button__card{
+.button__card {
   min-width: 40px;
   min-height: 40px;
   padding: 12px 8px;
   font-family: Roboto, Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 10px;
-  line-height: 12px;
+  font-style: bold;
+  font-weight: 600; /* 500 */
+  font-size: 12px; /*10px;*/
+  line-height: 14px; /* 12px;*/
   color: #000000;
   border-radius: 8px;
   margin-left: 5px;
   background-color: #fff;
   border-width: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
