--- a/src/blocks/card/__top-buttons/card__top-buttons.css
+++ b/src/blocks/card/__top-buttons/card__top-buttons.css
@@ -7,6 +7,12 @@
   align-items: center;
   justify-content: flex-end;
 }
+
+/* всплытие button__card-help */
+.card__top-buttons:hover .button__card-help {
+  display: flex;
+}
+
 @media (max-width: 1280px) {
   .card__top-buttons{
     top: calc( (100vw - 768px)/(1440 - 768) * (24 - 8) + 8px);
